--- a/insanities/ext/jinja2/templates/widgets/imageinput.html
+++ b/insanities/ext/jinja2/templates/widgets/imageinput.html
@@ -9,7 +9,9 @@
     <br/><br/>
 {% endif %}
 {% if mode != 'empty' and null %}
-  <label for="id-{{ input_name }}__delete">удалить</label>
+  <label for="id-{{ input_name }}__delete">
+    {{ form.env.gettext('удалить') }}
+  </label>
   <input type="checkbox" name="{{ input_name }}__delete" id="id-{{ input_name }}__delete" />
   <br/>
 {% endif %}
