--- a/examples/blogs/templates/layout.html
+++ b/examples/blogs/templates/layout.html
@@ -2,13 +2,16 @@
 
 <html>
     <head>
-        <title>Example blog</title>
+        <title>{{ N_('Example blog') }}</title>
         {% block css %}
         {% endblock %}
         {% block js %}
         {% endblock %}
     </head>
     <body>
+        <form action="{{ url_for('change_language') }}" method="POST">
+        <input type="submit" name="language" value="{% if language == 'en' %}ru{% else %}en{% endif %}" />
+        </form>
         {% block content %}
         {% endblock %}
     </body>
