some code review

--- a/examples/blogs/templates/layout.html
+++ b/examples/blogs/templates/layout.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>{{ N_('Example blog') }}</title>
+        <title>{{ _('Example blog') }}</title>
         {% block css %}
         {% endblock %}
         {% block js %}
