--- a/examples/blogs/templates/layout.html
+++ b/examples/blogs/templates/layout.html
@@ -9,7 +9,7 @@
         {% endblock %}
     </head>
     <body>
-        <form action="{{ url_for('change_language') }}" method="POST">
+        <form action="{{ VALS.url_for('change_language') }}" method="POST">
         <input type="submit" name="language" value="{% if language == 'en' %}ru{% else %}en{% endif %}" />
         </form>
         {% block content %}
