--- a/insanities/ext/jinja2/templates/forms/table.html
+++ b/insanities/ext/jinja2/templates/forms/table.html
@@ -13,7 +13,7 @@
       </th>
     {% endif %}
     <td {% if not field.label %}colspan="2"{% endif %}>
-      {{ field.render() }}
+      {{ ui.render(field) }}
     </td>
   </tr>
 {% endfor %}
