--- a/insanities/ext/jinja2/templates/widgets/fileinput.html
+++ b/insanities/ext/jinja2/templates/widgets/fileinput.html
@@ -3,15 +3,19 @@
 {{ ui.render(field.get_field('original_name')) }}
 
 {% if mode == 'existing' %}
-    <a target="_blank" href="{{ value.base_url }}{{ value.filename }}">
-        {{ widget.env.gettext('current file') }}
+    <a target="_blank" href="{{ file_url }}">
+        current file {#{ _('current file') }#}
     </a><br/>
 {% elif mode == 'temp' %}
-    <a target="_blank" href="{{ temp_url }}{{ value.uid }}{{ value.ext }}">
-        {{ widget.env.gettext('temporary file') }}
+    <a target="_blank" href="{{ file_url }}">
+        uploaded temporary file {#{ _('temporary file') }#}
     </a><br/>
 {% endif %}
 {% if mode != 'empty' and not required %}
-    {{ ui.render(field.get_field('delete')) }}<br/>
+    {{ ui.render(field.get_field('delete')) }}
+    <label for="{{ field.get_field('delete').id }}">delete</label>
+    <br/>
 {% endif %}
-<input type="file" name="{{ input_name }}" />
+
+
+<input type="file" name="{{ field.input_name }}" />
