Separated _FieldRenderrer class from HtmlUI

--- a/insanities/ext/jinja2/templates/fields/fieldset.html
+++ b/insanities/ext/jinja2/templates/fields/fieldset.html
@@ -14,7 +14,7 @@
       {% endif %}
     </th>
     <td>
-      {{ subfield.render() }}
+      {{ ui.render_field(subfield) }}
     </td>
   </tr>
 {% endfor %}
