* modified interface of _Renderer class. FormMedia is now accessable via   renderer.media   ie the usage is following:     {% set renderer = ui.render(form) %}     {% for media in renderer.media %}...{% endfor %}     {{ renderer.render() }} or simply {{ renderer }} * cleaned up form templates

--- a/insanities/ext/jinja2/templates/forms/table.html
+++ b/insanities/ext/jinja2/templates/forms/table.html
@@ -13,7 +13,7 @@
       </th>
     {% endif %}
     <td {% if not field.label %}colspan="2"{% endif %}>
-      {{ ui.render_field(field) }}
+      {{ ui.render_field(field)|safe }}
     </td>
   </tr>
 {% endfor %}
