--- a/insanities/ext/jinja2/templates/widgets/passwordinput.html
+++ b/insanities/ext/jinja2/templates/widgets/passwordinput.html
@@ -1,1 +1,2 @@
-<input id="{{ field.id }}" type="password" name="{{ field.input_name }}" value="{{ value|escape }}" {%- if widget.classname %} class="{{ widget.classname }}"{% endif %} />
+<input id="{{ field.id }}" type="password" name="{{ field.input_name|escape }}" value="{{ value|escape }}"
+       {%- if widget.classname %} class="{{ widget.classname }}"{% endif %} />
