--- a/insanities/ext/jinja2/templates/widgets/textinput.html
+++ b/insanities/ext/jinja2/templates/widgets/textinput.html
@@ -1,3 +1,3 @@
-<input id="{{ widget.id }}" type="text" name="{{ widget.input_name }}" value="{{ value|escape }}"
+<input id="{{ field.id }}" type="text" name="{{ field.input_name|escape }}" value="{{ value|escape }}"
        {%- if readonly %} readonly="readonly"{% endif %}
        {%- if widget.classname %} class="{{ widget.classname }}"{% endif %} />
