--- a/examples/blogs/templates/del_post.html
+++ b/examples/blogs/templates/del_post.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<a href="{{ VALS.url_for('posts') }}">{{ _('back to posts page') }}</a>
-<p>{{ _('Are you sure?') }}</p>
+<a href="{{ url_for('posts') }}">back to posts page</a>
+<p>Are you sure?</p>
 <p>{{ post.title }}</p>
 <form action="" method="post">
     <input type="submit" value="delete" />
