--- a/insanities/templates/jinja2/templates/widgets/file.html
+++ b/insanities/templates/jinja2/templates/widgets/file.html
@@ -1,2 +1,2 @@
-<input id="{{ field.id }}" type="file" name="{{ field.input_name|escape }}"
+<input id="{{ widget.id }}" type="file" name="{{ widget.input_name|escape }}"
        {%- if widget.classname %} class="{{ widget.classname }}"{% endif %} />
