--- a/insanities/templates/jinja2/templates/widgets/textarea.html
+++ b/insanities/templates/jinja2/templates/widgets/textarea.html
@@ -1,4 +1,4 @@
-<textarea id="{{ field.id }}" name="{{ field.input_name }}"
+<textarea id="{{ widget.id }}" name="{{ widget.input_name }}"
           {%- if readonly %} readonly="readonly"{% endif %}
           {%- if widget.classname %} class="{{ widget.classname }}"{% endif %}>
           {{- value|escape -}}
