--- a/examples/blogs/templates/posts.html
+++ b/examples/blogs/templates/posts.html
@@ -13,19 +13,19 @@
 
 {% block content %}
 
-<h3>{{ _('This is my small blog') }}</h3>
+<h3>This is my small blog</h3>
 
 {% if not paginator.items %}
-<p>{{ _('There is no posts yet') }}</p>
+<p>There is no posts yet</p>
 {% endif %}
 
 <ul>
     {% for post in paginator.items %}
     <li>
-        <a href="{{ VALS.url_for('post', id=post.id) }}">{{ post.title }}</a>
-        {% if VALS.user %}
-        <a class="action" href="{{ VALS.url_for('edit-post', id=post.id) }}">{{ _('edit') }}</a>
-        <a class="action" href="{{ VALS.url_for('del-post', id=post.id) }}">{{ _('delete') }}</a>
+        <a href="{{ url_for('post', id=post.id) }}">{{ post.title }}</a>
+        {% if auth_user %}
+        <a class="action" href="{{ url_for('edit-post', id=post.id) }}">edit</a>
+        <a class="action" href="{{ url_for('del-post', id=post.id) }}">delete</a>
         {% endif %}
     </li>
     {% endfor %}
@@ -40,11 +40,11 @@
 {% endif %}
 
 <div clas="actoins">
-    {% if VALS.user %}
-    <a href="{{ VALS.url_for('add-post') }}">{{ _('add post') }}</a>
-    <a href="{{ VALS.url_for('logout') }}">{{ _('logout') }}</a>
+    {% if auth_user %}
+    <a href="{{ url_for('add-post') }}">add post</a>
+    <a href="{{ url_for('logout') }}">logout</a>
     {% else %}
-    <a href="{{ VALS.url_for('login') }}">{{ _('login') }}</a>
+    <a href="{{ url_for('login') }}">login</a>
     {% endif %}
 </div>
 
