--- a/insanities/templates/jinja2/templates/widgets/fieldset.html
+++ b/insanities/templates/jinja2/templates/widgets/fieldset.html
@@ -1,5 +1,5 @@
 <table class="fieldset">
-{% for subfield in field.fields %}
+{% for subfield in fields %}
   {% if subfield.error %}
   <tr class="error-row">
     <td colspan="2">
@@ -14,7 +14,7 @@
       {% endif %}
     </th>
     <td>
-      {{ ui.render_field(subfield)|safe }}
+      {{ subfield.render()|safe }}
     </td>
   </tr>
 {% endfor %}
