--- a/insanities/templates/jinja2/templates/widgets/hiddeninput.html
+++ b/insanities/templates/jinja2/templates/widgets/hiddeninput.html
@@ -1,1 +1,1 @@
-<input id="{{ field.id }}" type="hidden" name="{{ field.input_name|escape }}" value="{{ value|escape }}" />
+<input id="{{ widget.id }}" type="hidden" name="{{ widget.input_name|escape }}" value="{{ value|escape }}" />
