--- a/insanities/templates/jinja2/templates/widgets/passwordinput.html
+++ b/insanities/templates/jinja2/templates/widgets/passwordinput.html
@@ -1,2 +1,2 @@
-<input id="{{ field.id }}" type="password" name="{{ field.input_name|escape }}" value="{{ value|escape }}"
+<input id="{{ widget.id }}" type="password" name="{{ widget.input_name|escape }}" value="{{ value|escape }}"
        {%- if widget.classname %} class="{{ widget.classname }}"{% endif %} />
