--- a/insanities/templates/jinja2/templates/widgets/select-checkbox.html
+++ b/insanities/templates/jinja2/templates/widgets/select-checkbox.html
@@ -1,10 +1,10 @@
 <div {%- if widget.classname %} class="{{ widget.classname }}"{% endif %}>
   {% for option in options %}
     <div>
-       <input type="{{ 'checkbox' field.multiple else 'radio' %}" value="{{ option.value|escape }}" {#
-              #}name="{{ field.input_name|escape }}" id="{{ field.id }}-{{ loop.index }}"
+       <input type="{{ 'checkbox' widget.multiple else 'radio' %}" value="{{ option.value|escape }}" {#
+              #}name="{{ widget.input_name|escape }}" id="{{ widget.id }}-{{ loop.index }}"
               {%- if option.selected %} checked="checked"{% endif %} />
-       <label for="{{ field.id }}-{{ loop.index }}"
+       <label for="{{ widget.id }}-{{ loop.index }}"
               {%- if option.selected %} class="selected"{% endif %}>
             {{- option.title|escape -}}
        </label>
