--- a/insanities/templates/jinja2/templates/widgets/select.html
+++ b/insanities/templates/jinja2/templates/widgets/select.html
@@ -1,5 +1,5 @@
-<select id="{{ field.id }}" name="{{ field.input_name }}"
-        {%- if field.multiple %} multiple="multiple"{% endif %}
+<select id="{{ widget.id }}" name="{{ widget.input_name }}"
+        {%- if widget.multiple %} multiple="multiple"{% endif %}
         {%- if readonly %} readonly="readonly"{% endif %}
         {%- if widget.classname %} class="{{ widget.classname }}"{% endif %}
         {%- if widget.size %} size="{{ widget.size }}"{% endif %}>
