fix wrong default template

--- a/insanities/templates/jinja2/templates/widgets/fieldset.html
+++ b/insanities/templates/jinja2/templates/widgets/fieldset.html
@@ -1,5 +1,5 @@
 <table class="fieldset">
-{% for subfield in fields %}
+{% for subfield in field.fields %}
   {% if subfield.error %}
   <tr class="error-row">
     <td colspan="2">
