fixed the case FileFieldSet(required=False)

--- a/examples/filefield/templates/index.html
+++ b/examples/filefield/templates/index.html
@@ -9,7 +9,7 @@
 </ul>
 {% endif %}
 
-<form method="POST" action='{{ url_for('files') }}' enctype="multipart/form-data">
+<form method="POST" enctype="multipart/form-data">
 <fieldset>
 <table>
     {{ form.render()|safe }}
