rendering categories draft

--- a/insanities/templates/jinja2/templates/forms/default.html
+++ b/insanities/templates/jinja2/templates/forms/default.html
@@ -1,11 +1,20 @@
 {% for field in form.fields %}
-<p class="form-row">
+<p class="form-row" {% if field.render_type="hidden" %}style="display: none"{% endif %}>
   {% if field.error %}
   <span class="error">{{ field.error }}</span>
   {% endif %}
-  {% if field.label %}
-  <label for="{{ field.id }}">{{ field.label }}</label>
+  {% if field.render_type == 'checkbox' %}
+    {{ field.render()|safe }}
+    {% if field.label %}
+    <label for="{{ field.id }}">{{ field.label }}</label>
+    {% endif %}
+  {% elif field.render_type == 'hidden' %}
+    {{ field.render()|safe }}
+  {% else %}
+    {% if field.label %}
+    <label for="{{ field.id }}">{{ field.label }}</label>
+    {% endif %}
+    {{ field.render()|safe }}
   {% endif %}
-  {{ field.render()|safe }}
 </p>
 {% endfor %}
