--- a/insanities/templates/jinja2/templates/forms/table.html
+++ b/insanities/templates/jinja2/templates/forms/table.html
@@ -7,13 +7,33 @@
   </tr>
   {% endif %}
   <tr class="form-row{% if loop.last %} last{% endif %}{% if loop.first %} first{% endif %}{% if field.classname %} {{ field.classname }}{% endif %}">
-    {% if field.label %}
-      <th>
-        <label for="{{ field.id }}">{{ field.label }}</label>
-      </th>
-    {% endif %}
-    <td {% if not field.label %}colspan="2"{% endif %}>
-      {{ field.render()|safe }}
+  {% if subfield.render_type == 'checkbox' %}
+    <th></th>
+    <td>
+      {{ subfield.render()|safe }}
+      {% if subfield.label %}
+      <label for="{{ subfield.id }}">{{ subfield.label }}</label>
+      {% endif %}
     </td>
+  {% elif subfield.render_type == 'hidden' %}
+    <td style="display: none" colspan="2">{{ subfield.render()|safe }}</td>
+  {% elif subfield.render_type == 'full-width' %}
+    <td colspan="2">
+      {% if subfield.label %}
+      <p class="th"><label for="{{ subfield.id }}">{{ subfield.label }}</label></p>
+      {% endif %}
+      {{ subfield.render()|safe }}
+    </td>
+  {% else %}
+    <th>
+      {% if subfield.label %}
+      <label for="{{ subfield.id }}">{{ subfield.label }}</label>
+      {% endif %}
+    </th>
+    <td>
+      {{ subfield.render()|safe }}
+    </td>
+  {% endif %}
+
   </tr>
 {% endfor %}
