various fixes; get rid of request.FILES

--- a/examples/filefield/templates/layout.html
+++ b/examples/filefield/templates/layout.html
@@ -2,8 +2,14 @@
 
 <html>
     <head>
-        <title>{{ _('Example file manager') }}</title>
+        <title>Example file manager</title>
         {% block css %}
+        <style>
+            .error{
+                color: #660000;
+                display: block;
+            }
+        </style>
         {% endblock %}
         {% block js %}
         {% endblock %}
