--- a/insanities/templates/jinja2/templates/widgets/select-checkbox.html
+++ b/insanities/templates/jinja2/templates/widgets/select-checkbox.html
@@ -1,7 +1,7 @@
 <div {%- if widget.classname %} class="{{ widget.classname }}"{% endif %}>
   {% for option in options %}
     <div>
-       <input type="{{ 'checkbox' widget.multiple else 'radio' %}" value="{{ option.value|escape }}" {#
+       <input type="{{ 'checkbox' if widget.multiple else 'radio' }}" value="{{ option.value|escape }}" {#
               #}name="{{ widget.input_name|escape }}" id="{{ widget.id }}-{{ loop.index }}"
               {%- if option.selected %} checked="checked"{% endif %} />
        <label for="{{ widget.id }}-{{ loop.index }}"
