--- a/iktomi/templates/jinja2/templates/widgets/textarea.html
+++ b/iktomi/templates/jinja2/templates/widgets/textarea.html
@@ -1,5 +1,5 @@
 <textarea id="{{ widget.id }}" name="{{ widget.input_name }}"
           {%- if readonly %} readonly="readonly"{% endif %}
           {%- if widget.classname %} class="{{ widget.classname }}"{% endif %}>
-          {{- value|escape -}}
+          {{- value|forceescape -}}
 </textarea>
