--- a/iktomi/templates/jinja2/templates/widgets/textinput.html
+++ b/iktomi/templates/jinja2/templates/widgets/textinput.html
@@ -1,3 +1,3 @@
-<input id="{{ widget.id }}" type="text" name="{{ widget.input_name|escape }}" value="{{ value|escape }}"
+<input id="{{ widget.id }}" type="text" name="{{ widget.input_name|escape }}" value="{{ value|forceescape }}"
        {%- if readonly %} readonly="readonly"{% endif %}
        {%- if widget.classname %} class="{{ widget.classname }}"{% endif %} />
