CharDisplay escapes content by default; More tests

--- a/iktomi/templates/jinja2/templates/widgets/span.html
+++ b/iktomi/templates/jinja2/templates/widgets/span.html
@@ -5,6 +5,6 @@
   {%- elif should_escape -%}
     {{ value|forceescape }}
   {%- else -%}
-    {{ value }}
+    {{ value|safe }}
   {%- endif -%}
 </span>
