--- a/iktomi/templates/jinja2/templates/widgets/fieldset.html
+++ b/iktomi/templates/jinja2/templates/widgets/fieldset.html
@@ -1,6 +1,7 @@
 <table class="fieldset">
 {% for subfield in field.fields %}
-  {% if subfield.error %}
+{% if subfield.readable %}
+{% if subfield.error %}
   <tr class="error-row">
     <td colspan="2">
       <span class="error">{{ subfield.error }}</span>
@@ -8,22 +9,22 @@
   </tr>
   {% endif %}
   <tr class="form-row{% if loop.last %} last{% endif %}{% if loop.first %} first{% endif %}{% if subfield.widget.classname is defined %} {{ subfield.widget.classname }}{% endif %}">
-  {% if subfield.render_type == 'checkbox' %}
+  {% if subfield.widget.render_type == 'checkbox' %}
     <th></th>
     <td>
-      {{ subfield.render()|safe }}
+      {{ subfield.widget.render()|safe }}
       {% if subfield.label %}
       <label for="{{ subfield.id }}">{{ subfield.label }}</label>
       {% endif %}
     </td>
-  {% elif subfield.render_type == 'hidden' %}
-    <td style="display: none" colspan="2">{{ subfield.render()|safe }}</td>
-  {% elif subfield.render_type == 'full-width' %}
+  {% elif subfield.widget.render_type == 'hidden' %}
+    <td style="display: none" colspan="2">{{ subfield.widget.render()|safe }}</td>
+  {% elif subfield.widget.render_type == 'full-width' %}
     <td colspan="2">
       {% if subfield.label %}
       <p class="th"><label for="{{ subfield.id }}">{{ subfield.label }}</label></p>
       {% endif %}
-      {{ subfield.render()|safe }}
+      {{ subfield.widget.render()|safe }}
     </td>
   {% else %}
     <th>
@@ -32,9 +33,10 @@
       {% endif %}
     </th>
     <td>
-      {{ subfield.render()|safe }}
+      {{ subfield.widget.render()|safe }}
     </td>
   {% endif %}
   </tr>
+{% endif %}
 {% endfor %}
 </table>
