hints for fields

--- a/iktomi/templates/jinja2/templates/forms/default.html
+++ b/iktomi/templates/jinja2/templates/forms/default.html
@@ -17,6 +17,10 @@
     {% endif %}
     {{ field.widget.render()|safe }}
   {% endif %}
+
+  {%- if field.hint %}
+    <span class="hint">{{ field.hint }}</span>
+  {%- endif -%}
 </p>
 {% endif %}
 {% endfor %}
