renders_hint: allow widget to render the hint itself

--- a/iktomi/templates/jinja2/templates/forms/default.html
+++ b/iktomi/templates/jinja2/templates/forms/default.html
@@ -18,7 +18,7 @@
     {{ field.widget.render()|safe }}
   {% endif %}
 
-  {%- if field.hint %}
+  {%- if field.hint and not field.widget.renders_hint  %}
     <span class="hint">{{ field.hint }}</span>
   {%- endif -%}
 </p>
