classname is rendered in subfiels widget, not in parent one

--- a/iktomi/templates/jinja2/templates/widgets/fieldset.html
+++ b/iktomi/templates/jinja2/templates/widgets/fieldset.html
@@ -20,9 +20,7 @@
     </td>
   </tr>
   {%- endif -%}
-  <tr class="form-row{% if loop.last %} last{% endif %}{% if loop.first %} first{% endif %}
-    {%- if subfield.widget.classname is defined and subfield.widget.classname -%}
-      {# XXX #} {{ subfield.widget.classname }}{% endif %}"
+  <tr class="form-row{% if loop.last %} last{% endif %}{% if loop.first %} first{% endif %}"
     {%- if subfield.widget.render_type == 'hidden' %} style="display:none"{% endif %}>
   {%- if subfield.widget.render_type == 'checkbox' -%}
     <th></th>
