Support for missing value in FieldSet

--- a/iktomi/templates/jinja2/templates/widgets/fieldset.html
+++ b/iktomi/templates/jinja2/templates/widgets/fieldset.html
@@ -10,6 +10,7 @@
   {%- endif -%}
 {% endmacro -%}
 
+{% if value %}
 <table class="fieldset{% if widget.classname %} {{ widget.classname }} {% endif %}">
 {%- for subfield in field.fields %}
 {%- if subfield.readable %}
@@ -50,3 +51,6 @@
 {%- endif -%}
 {% endfor -%}
 </table>
+{% else %}
+—
+{% endif %}
