--- a/iktomi/templates/jinja2/templates/widgets/fieldlist.html
+++ b/iktomi/templates/jinja2/templates/widgets/fieldlist.html
@@ -1,9 +1,9 @@
 <table class="fieldlist" id="{{ field.input_name }}">
     <tbody>
-    {% for index in field.form.raw_data.getall(field.indeces_input_name) %}
+    {% for index in field.form.raw_data.getall(field.indices_input_name) %}
         <tr class="fieldlist-item">
             <td class="fieldlist-cell">
-                <input type="hidden" name="{{ field.indeces_input_name }}" value="{{ index }}" />
+                <input type="hidden" name="{{ field.indices_input_name }}" value="{{ index }}" />
                 {% set f = field.field(name=index) %}
                 {% if f.error %}
                 <div>
