--- a/examples/filefield/templates/fileinput.html
+++ b/examples/filefield/templates/fileinput.html
@@ -1,6 +1,6 @@
-{{ field.get_field('mode').render()|safe }}
-{{ field.get_field('temp_name').render()|safe }}
-{{ field.get_field('original_name').render()|safe }}
+{{ field.get_field('mode').widget.render()|safe }}
+{{ field.get_field('temp_name').widget.render()|safe }}
+{{ field.get_field('original_name').widget.render()|safe }}
 
 {% set value = field.clean_value %}
 
@@ -13,10 +13,10 @@
         {% endif %}
     </a><br/>
     {% if not required %}
-        {{ field.get_field('delete').render()|safe }}
+        {{ field.get_field('delete').widget.render()|safe }}
         <label for="{{ field.get_field('delete').id }}">delete</label>
         <br/>
     {% endif %}
 {% endif %}
 
-{{ field.get_field('file').render()|safe }}
+{{ field.get_field('file').widget.render()|safe }}
